refactor(frontend): replace `.length` checks with `.toHaveSize` in tests and enforce `readonly` keyword for injected dependencies